<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".activities.MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="false">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/loginid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_login_id"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_password"
                        android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_first_name"
                        android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/second_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_second_name"
                        android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/email_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_email_address"
                        android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>


            <TextView
                    android:id="@+id/date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/label_date_of_birth"/>


            <TextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/label_gender"/>

            <RadioGroup
                    android:id="@+id/gender_RG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RadioButton
                        android:id="@+id/male_RB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_male"/>
                <RadioButton
                        android:id="@+id/female_RB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_female"/>
            </RadioGroup>

            <Spinner
                    android:id="@+id/age_spinner"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_mobile_number"
                        android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.SwitchCompat
                    android:id="@+id/push_nitfy_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:checked="false"
                    android:text="@string/label_push_notification"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginBottom="10dp"
                    app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_address"
                        android:inputType="textMultiLine"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submit_but"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/label_submit"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>