<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.LoginActivity">

    <!-- <ScrollView android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
 -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@mipmap/ic_launcher_round"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_email_address"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_password"
                    android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_login"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/signup_but"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_signup"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"/>

    </LinearLayout>

    <!-- </ScrollView>-->

</LinearLayout>